2006-01-13  Prakash Punnoor <prakash@punnoor.de>

	* test/testda.c, test/testdoppler.c, test/testgain.c, test/testlib.c,
	test/testlib.h, test/testlistener.c, test/testlistener2.c,
	test/testlistener3.c, test/testlistener4.c, test/testloop.c,
	test/testmp32.c, test/testmulti.c, test/testmultinothread.c,
	test/testnothread.c, test/testpause.c, test/testpitch.c,
	test/testpitchnothread.c, test/testpitchnothread2.c,
	test/testqueue.c, test/testqueue2.c, test/testqueue3.c,
	test/testrelative.c, test/testreverb.c, test/testsingle.c,
	test/testsourcestop.c, test/testtime.c: use current alut wave loader
	instead of obsolete one, and as we use alut anyway, use its init/exit,
	as well
	
	* CMakeLists.txt: forgot testmulitnothread; add -fomit-frame-pointer
	only when doing optimization
	
2006-01-13  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/Makefile.am, src/arch/.cvsignore: added

	* configure.ac, src/Makefile.am: kludge for nasm vs. automake-1.8
	
	* README: cmake related corrections

2006-01-12  Prakash Punnoor <prakash@punnoor.de>

	* src/extensions/al_ext_vorbis.c, src/backends/alc_backend_alsa.c,
	src/backends/alc_backend_arts.c, src/backends/alc_backend_esd.c,
	src/backends/alc_backend_sdl.c: #if -> #ifdef
	
	* CMakeLists.txt: improve defines handling
	
	* src/Makefile.am: Fix (I hope) for SUBDIRS problem (with older
	automake?).

2006-01-11  Prakash Punnoor <prakash@punnoor.de>

	* src/al_siteconfig.h: #if -> #ifdef
	
	* CMakeLists.txt: test for __attribute__(...)

2006-01-11  Sven Panne  <sven.panne@aedion.de>

	* admin/autotools/.indent.pro, src/alc/alc_device.c,
	src/backends/alc_backend.c, src/backends/alc_backend.h,
	src/backends/alc_backend_alsa.c: More steps towards a sane backend API.

	* configure.ac, src/al_buffer.c, src/al_config.c, src/al_debug.c,
	src/al_debug.h, src/al_error.c, src/al_ext.c, src/al_filter.c,
	src/al_main.h, src/al_mixer.c, src/al_mspool.c, src/al_rcvar.c,
	src/al_siteconfig.h, src/al_source.c, src/al_threadlib.c,