@@ -1,3 +1,7 @@
+2006-01-17  Sven Panne  <sven.panne@aedion.de>
+
+	* src/extensions/al_ext_mp3.c: Synched dlopen #ifdef with configure.ac.
+
 2006-01-13  Prakash Punnoor <prakash@punnoor.de>
 
 	* test/testda.c, test/testdoppler.c, test/testgain.c, test/testlib.c,
